--- a/aufg_11/aufg_11_2_decision_trees_sklearn.ipynb
+++ b/aufg_11/aufg_11_2_decision_trees_sklearn.ipynb
@@ -1252,7 +1252,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Die Entropie-Werte passen nicht, weil der sklearn Algorithmus DecessionTreeClassifier das Datenset nur einmal splittet aber nicht wie in der manuellen Berechnung zum Beispiel beim Alter in drei Gruppen."
+   ]
   }
  ],
  "metadata": {
