Change aufg_11_2, add comment

--- a/aufg_11/aufg_11_2_decision_trees_sklearn.ipynb
+++ b/aufg_11/aufg_11_2_decision_trees_sklearn.ipynb
@@ -1253,7 +1253,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Die Entropie-Werte passen nicht, weil der sklearn Algorithmus DecessionTreeClassifier das Datenset nur einmal splittet aber nicht wie in der manuellen Berechnung zum Beispiel beim Alter in drei Gruppen."
+    "# Die Entropie-Werte passen nicht, weil der sklearn Algorithmus DecessionTreeClassifier das Datenset nur einmal splittet aber nicht wie in der manuellen Berechnung zum Beispiel beim Alter in drei Gruppen.\n",
+    "# SciKit klassifiziert hier nur binär."
    ]
   }
  ],
