--- a/aufg_12/aufg_12.ipynb
+++ b/aufg_12/aufg_12.ipynb
@@ -10,12 +10,10 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /home/guido/anaconda3/lib/python3.8/site-packages (1.1.3)\n",
-      "Requirement already satisfied: numpy>=1.15.4 in /home/guido/anaconda3/lib/python3.8/site-packages (from pandas) (1.19.2)\n",
       "Requirement already satisfied: pytz>=2017.2 in /home/guido/anaconda3/lib/python3.8/site-packages (from pandas) (2020.1)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in /home/guido/anaconda3/lib/python3.8/site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: numpy>=1.15.4 in /home/guido/anaconda3/lib/python3.8/site-packages (from pandas) (1.19.2)\n",
       "Requirement already satisfied: six>=1.5 in /home/guido/anaconda3/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
-      "\u001b[33mWARNING: You are using pip version 21.1.1; however, version 21.1.3 is available.\n",
-      "You should consider upgrading via the '/home/guido/anaconda3/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -200,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f5d7bed6d30>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7fe9b68cbe80>"
       ]
      },
      "execution_count": 5,
