--- a/aufg_12/aufg_12.ipynb
+++ b/aufg_12/aufg_12.ipynb
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /home/guido/anaconda3/lib/python3.8/site-packages (1.1.3)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /home/guido/anaconda3/lib/python3.8/site-packages (from pandas) (2020.1)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in /home/guido/anaconda3/lib/python3.8/site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /home/guido/anaconda3/lib/python3.8/site-packages (from pandas) (2020.1)\n",
       "Requirement already satisfied: numpy>=1.15.4 in /home/guido/anaconda3/lib/python3.8/site-packages (from pandas) (1.19.2)\n",
       "Requirement already satisfied: six>=1.5 in /home/guido/anaconda3/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
@@ -198,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7fe9b68cbe80>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f976c0e86d0>"
       ]
      },
      "execution_count": 5,
@@ -250,11 +250,175 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 0 0 2 0 1 2 0 3 2 0 3 2 1 4 0 3 1 4 4 0 3 4 0 0 2 3 3 3 1 3 3 1 1 0 4 1\n",
+      " 4 3 0 1 1 1 4 1 0 2 2 1 2 2 1 3 3 2 2 4 2 0 1 2 4 2 2 1 2 4 4 4 1 1 2 3 2\n",
+      " 2 3 0 1 2 3 3 1 0 4 4 0 4 4 4 2 3 3 3 0 2 2 3 1 4 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Es gibt 5 klar ersichtliche Custer, K=5\n",
+    "labels = kmeans.predict(X)\n",
+    "print(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>Cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-5.340236</td>\n",
+       "      <td>4.747246</td>\n",
+       "      <td>3.823326</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-9.587065</td>\n",
+       "      <td>-3.434466</td>\n",
+       "      <td>9.701839</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-8.385012</td>\n",
+       "      <td>-3.902794</td>\n",
+       "      <td>8.514620</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.708226</td>\n",
+       "      <td>2.658575</td>\n",
+       "      <td>5.404482</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-7.431665</td>\n",
+       "      <td>-4.390251</td>\n",
+       "      <td>9.003216</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>5.240474</td>\n",
+       "      <td>2.983800</td>\n",
+       "      <td>5.104915</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>-1.675543</td>\n",
+       "      <td>3.780111</td>\n",
+       "      <td>-8.060940</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>2.979751</td>\n",
+       "      <td>10.772783</td>\n",
+       "      <td>-10.093143</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>-5.154519</td>\n",
+       "      <td>5.976515</td>\n",
+       "      <td>2.794622</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>-4.878509</td>\n",
+       "      <td>5.096635</td>\n",
+       "      <td>5.659783</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          V1         V2         V3  Cluster\n",
+       "0  -5.340236   4.747246   3.823326        4\n",
+       "1  -9.587065  -3.434466   9.701839        0\n",
+       "2  -8.385012  -3.902794   8.514620        0\n",
+       "3   5.708226   2.658575   5.404482        2\n",
+       "4  -7.431665  -4.390251   9.003216        0\n",
+       "..       ...        ...        ...      ...\n",
+       "95  5.240474   2.983800   5.104915        2\n",
+       "96 -1.675543   3.780111  -8.060940        3\n",
+       "97  2.979751  10.772783 -10.093143        1\n",
+       "98 -5.154519   5.976515   2.794622        4\n",
+       "99 -4.878509   5.096635   5.659783        4\n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# in welchem Cluster sind die Punkte\n",
+    "X[\"Cluster\"] = labels\n",
+    "X\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kdf = pd.DataFrame({\"k\": range(1,16)})"
+    " = pd.DataFrame({\"k\": range(1,16)})"
    ]
   },
   {
