--- a/aufg_12/aufg_12.ipynb
+++ b/aufg_12/aufg_12.ipynb
@@ -264,7 +264,7 @@
     }
    ],
    "source": [
-    "# Es gibt 5 klar ersichtliche Custer, K=5\n",
+    "# A) Es gibt 5 klar ersichtliche Custer, K=5\n",
     "labels = kmeans.predict(X)\n",
     "print(labels)"
    ]
@@ -407,7 +407,7 @@
     }
    ],
    "source": [
-    "# in welchem Cluster sind die Punkte\n",
+    "# B) in welchem Cluster sind die Punkte\n",
     "X[\"Cluster\"] = labels\n",
     "X\n"
    ]
