--- a/aufg_12/aufg_12.ipynb
+++ b/aufg_12/aufg_12.ipynb
@@ -264,7 +264,7 @@
     }
    ],
    "source": [
-    "# A) Es gibt 5 klar ersichtliche Custer, K=5\n",
+    "# A) Es gibt 5 klar ersichtliche Cluster, K=5\n",
     "labels = kmeans.predict(X)\n",
     "print(labels)"
    ]
@@ -497,7 +497,8 @@
     "ax.set_ylabel('inertia')\n",
     "\n",
     "ax.plot(kdf[\"k\"], kdf[\"inertia\"], 'b')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# die Kurve k -elbow belegt K=5"
    ]
   }
  ],
